# Nemo-Anna

./: README.md
Anna/: Anna JSON Operational Policy v1.0.docx  Anna JSON Specification v1.2.docx
Nemo/: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6
Nemo/components/anna_cfg/: CMakeLists.txt  Kconfig.projbuild  anna_cfg_parse.c  anna_cfg_storage.c  anna_state_storage.c
Nemo/components/anna_cfg/include/: anna_cfg.h  anna_cfg_parse.h  anna_state_storage.h
Nemo/components/led_controller/: CMakeLists.txt  idf_component.yml  led_controller.c
Nemo/components/led_controller/include/: led_controller.h
Nemo/components/mode_manager/: CMakeLists.txt  mode_manager.cpp
Nemo/components/mode_manager/include/: mode_manager.h
Nemo/main/: CMakeLists.txt  Kconfig.projbuild  anna_cloud_identity.cpp  anna_cloud_identity.h  anna_cloud_sync.cpp  anna_cloud_sync.h  anna_commissionable_data_provider.cpp  anna_commissionable_data_provider.h  anna_device_info_provider.h  anna_device_instance_info_provider.cpp  anna_device_instance_info_provider.h  anna_factory_reset.cpp  anna_factory_reset.h  anna_runtime_rebuild.cpp  anna_runtime_rebuild.h  app_driver.cpp  app_main.cpp  app_priv.h  app_settings.cpp  host_serial_rx.cpp  host_serial_rx.h  idf_component.yml
